--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "~3.4.4",
+    "guid": "0.0.12",
     "jslint": "^0.9.6",
     "multer": "^1.1.0"
   },
